infra/k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dystopian-backend
  namespace: dystopian
  labels: { app: backend }
  annotations:
    argocd-image-updater.argoproj.io/image-list: backend=docker.io/ogabrielpereiraa/dystopian-news-backend:latest
    argocd-image-updater.argoproj.io/backend.update-strategy: digest
    argocd-image-updater.argoproj.io/write-back-method: git
spec:
  replicas: 2
  selector: { matchLabels: { app: backend } }
  template:
    metadata: { labels: { app: backend } }
    spec:
      containers:
      - name: backend
        image: docker.io/ogabrielpereiraa/dystopian-news-backend:latest
        ports: [{ containerPort: 8000 }]
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
