infra/k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dystopian-backend-lb
  namespace: dystopian
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 8000
